rabbit/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: convert-rabbitmq-ingress
  labels:
    name: convert-rabbitmq-ingress
spec:
  rules:
    - host: qdvn-rabbitmq-manager.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: convert-rabbitmq
                port:
                  number: 15672

      # - host: qdvn-rabbitmq-manager.com
      #   http:
      #     paths:
      #       - pathType: Prefix
      #         path: "/"
      #         backend:
      #           service:
      #             name: convert-rabbitmq
      #             port:
      #               number: 15672
